syntax = "proto3";
package rdma;

message RDMAConnDisconnect {
    uint64 nodeid = 1;
}

